--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -61,7 +61,7 @@
                 </li>
                 {% else %}
                 <li class="nav-item active">
-                    <a class="nav-link" href="#Under_Developing"><i class="far fa-user-circle"></i>
+                    <a class="nav-link" href="{% url 'users:profile' %}"><i class="far fa-user-circle"></i>
                         {{ user.username }}</a>
                 </li>
                 {% endif %}
