--- a/chat/static/chat/css/room.css
+++ b/chat/static/chat/css/room.css
@@ -1,187 +1,449 @@
-/* --------------------- */
-/* MESSAGES */
-/* --------------------- */
-
+html,
 body {
-    margin-top: 80px;
-    margin-bottom: 0px;
+    background: #252C33;
+    font-family: 'Lato', sans-serif;
+    margin: 0px auto;
+}
+
+::selection {
+    background: rgba(82, 179, 217, 0.3);
+    color: inherit;
 }
 
 .navbar-main {
     display: none;
 }
 
+/* --------------------- */
+/* MESSAGES */
+/* --------------------- */
+
+/* M E N U */
+
+.menu {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    width: 100%;
+    height: 50px;
+    background: rgba(76, 209, 55, 0.9);
+    z-index: 100;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+
+.back {
+    position: absolute;
+    width: 90px;
+    height: 50px;
+    top: 0px;
+    left: 0px;
+    color: rgba(255, 255, 255, 0.5);
+    line-height: 45px;
+    font-size: 40px;
+    padding-left: 10px;
+    cursor: pointer;
+    transition: .15s all;
+}
+
+.back img {
+    position: absolute;
+    top: 5px;
+    left: 30px;
+    width: 40px;
+    height: 40px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    margin-left: 15px;
+}
+
+.back:active {
+    background: rgba(0, 0, 0, 0.15);
+}
+
+.name {
+    position: absolute;
+    top: 3px;
+    left: 110px;
+    font-family: 'Lato';
+    font-size: 25px;
+    font-weight: 300;
+    color: rgba(255, 255, 255, 0.98);
+    cursor: default;
+}
+
+.last {
+    position: absolute;
+    top: 30px;
+    left: 115px;
+    font-family: 'Lato';
+    font-size: 11px;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.6);
+    cursor: default;
+}
+
+.members {
+    position: absolute;
+    top: 30px;
+    left: 115px;
+    font-family: 'Lato';
+    font-size: 11px;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.6);
+    cursor: default;
+    word-spacing: 2px;
+}
+
+#attachFileBtn {
+    float: right;
+    color: white;
+    margin-top: 10px;
+    font-size: 150%;
+    margin-right: 20px;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+#attachFileBtn:hover {
+    color: #EBC12C;
+}
+
+/* M E S S A G E S */
 
 .chat {
-    width: 100%;
-    background: #f2f5f8;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    color: #434651;
-}
-
-.chat .chat-header {
-    height: 100px;
-    padding: 20px;
-    border-bottom: 2px solid white;
-    position: fixed;
-    width: 100%;
-    top: 0px;
-    z-index: 9999;
-    background-color: #4CD137
-}
-
-.chat .chat-header img {
-    float: left;
-    border-radius: 50%;
-    padding-right: 10px
-}
-
-.chat .chat-header .chat-about {
-    float: left;
-    padding-left: 10px;
-    margin-top: 6px;
-}
-
-.chat .chat-header .chat-with {
-    font-weight: bold;
-    font-size: 16px;
-}
-
-.chat .chat-header .chat-num-messages {
-    color: #fff;
-}
-
-.chat .chat-history {
-    padding: 30px 30px 20px;
-    border-bottom: 2px solid white;
-    overflow-y: scroll;
-}
-
-.chat .chat-history .message-data {
+    list-style: none;
+    background: none;
+    margin: 0;
+    padding: 0 0 50px 0;
+    margin-top: 60px;
     margin-bottom: 15px;
 }
 
-.chat .chat-history .message-data-time {
-    color: #a8aab1;
-    padding-left: 6px;
+.chat li {
+    padding: 0.5rem;
+    overflow: hidden;
+    display: flex;
 }
 
-.chat .chat-history .message {
-    color: white;
-    padding: 18px 20px;
-    line-height: 26px;
-    font-size: 16px;
-    border-radius: 7px;
-    margin-bottom: 30px;
-    width: 90%;
+.chat .notification {
     position: relative;
+    display: inherit;
+    text-align: center;
+    font-size: 13px;
+    color: rgba(255, 255, 255, 0.15);
+    background: rgba(234, 247, 255, 0.035);
+    line-height: 30px;
+    border-radius: 100px;
+    margin: 7px 35%;
+    height: 30px;
+    width: 30%;
+    box-shadow: 0px 1px 0px rgba(0, 0, 0, .05), 0px -1px 0px rgba(0, 0, 0, .05), inset 0px 1px 0px rgba(255, 255, 255, .02), inset 0px -1px 0px rgba(255, 255, 255, .02);
+    text-shadow: 0px -1px 0px rgba(0, 0, 0, .1), 0px 1px 0px rgba(255, 255, 255, .05);
+    cursor: default;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    transition: all .2s cubic-bezier(0.565, -0.260, 0.255, 1.410);
 }
 
-.chat .chat-history .message:after {
-    bottom: 100%;
-    left: 7%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
+.chat .notification time {
     position: absolute;
-    pointer-events: none;
-    border-bottom-color: #86bb71;
-    border-width: 10px;
-    margin-left: -10px;
+    top: 7px;
+    right: 7px;
+    font-size: 11px;
+    padding: 8px;
+    border-radius: 100px;
+    background: #252C33;
+    box-shadow: 0px 0px 2px rgba(255, 255, 255, .02), inset 0px 0px 1px rgba(27, 35, 42, 0.1);
+    height: 1px;
+    line-height: 0px;
+    color: rgba(255, 255, 255, 0.1);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    transition: all .2s cubic-bezier(0.565, -0.260, 0.255, 1.410);
 }
 
-.chat .chat-history .my-message {
-    background: #86bb71;
+.other .msg {
+    border-top-left-radius: 0px;
+    box-shadow: -1px 2px 0px #c1cbcd;
 }
 
-.chat .chat-history .other-message {
-    background: #94c2ed;
+.other:before {
+    content: "";
+    position: relative;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+    width: 0px;
+    height: 0px;
+    border: 5px solid #eef8ff;
+    border-left-color: transparent;
+    border-bottom-color: transparent;
 }
 
-.chat .chat-history .other-message:after {
-    border-bottom-color: #94c2ed;
-    left: 93%;
+.self {
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
-.chat .chat-message {
-    padding: 30px;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    background-color: #f2f5f8;
+.self .msg {
+    border-bottom-right-radius: 0px;
+    box-shadow: 1px 2px 0px #c1cbcd;
 }
 
-.chat .chat-message textarea {
-    width: 100%;
-    border: none;
-    padding: 10px 20px;
-    font: 14px/22px "Lato", Arial, sans-serif;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    resize: none;
-}
-
-.chat .chat-message .fa-microphone,
-.chat .chat-message .fa-paperclip {
-    font-size: 16px;
-    color: gray;
-    cursor: pointer;
-}
-
-.chat .chat-message button {
+.self:after {
+    content: "";
+    position: relative;
+    display: inline-block;
     float: right;
-    color: #4CD137;
-    font-size: 30px;
-    border: none;
-    cursor: pointer;
-    font-weight: bold;
-    background: #f2f5f8;
+    bottom: 0px;
+    right: 0px;
+    width: 0px;
+    height: 0px;
+    border: 5px solid #eef8ff;
+    border-right-color: transparent;
+    border-top-color: transparent;
+    box-shadow: 0px 2px 0px #c1cbcd;
 }
 
-.chat .chat-message button:hover {
-    color: #75b1e8;
+.msg {
+    background: #eef8ff;
+    min-width: 50px;
+    padding: 10px;
+    border-radius: 2px;
+    word-break: break-all;
 }
 
-.online,
-.offline,
-.me {
-    margin-right: 3px;
-    font-size: 10px;
+.msg .user {
+    font-size: 14px;
+    margin: 0 0 2px 0;
+    color: #666;
+    font-weight: 700;
+    margin-top: -2px;
+    margin-bottom: 5px;
+    transition: all .2s ease;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
-.online {
-    color: #86bb71;
+.msg p {
+    font-size: 13px;
+    margin: 0 0 2px 0;
+    color: #777;
+    transition: all .2s ease;
 }
 
-.offline {
-    color: #e38968;
-}
-
-.me {
-    color: #94c2ed;
-}
-
-.align-left {
-    text-align: left;
-}
-
-.align-right {
-    text-align: right;
-}
-
-.float-right {
-    float: right;
-}
-
-.clearfix:after {
-    visibility: hidden;
+.msg img {
+    position: relative;
     display: block;
-    font-size: 0;
-    content: " ";
-    clear: both;
-    height: 0;
+    width: 600px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 3px #eee;
+    transition: all .8s cubic-bezier(0.565, -0.260, 0.255, 1.410);
+    cursor: default;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+
+.msg time {
+    font-size: 0.7rem;
+    color: rgba(0, 0, 0, .35);
+    margin-top: 3px;
+    float: right;
+    cursor: default;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+
+.msg time:before {
+    content: "\f017";
+    color: #ddd;
+    font-family: FontAwesome;
+    display: inline-block;
+    margin-right: 4px;
+}
+
+
+
+/* T Y P E */
+.typezone {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    width: 100%;
+    height: 50px;
+    z-index: 99;
+    background: #eee;
+    border: none;
+    outline: none;
+}
+
+textarea,
+textarea:hover {
+    position: absolute;
+    bottom: 0px;
+    left: 8%;
+    right: 8%;
+    width: 80%;
+    height: 50px;
+    z-index: 100;
+    background: #fafafa;
+    border: none;
+    outline: none;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 2%;
+    color: #666;
+    font-weight: 400;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    overflow: hidden;
+    resize: none;
+    z-index: 200;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    transition: all .4s cubic-bezier(0.565, -0.260, 0.255, 1.410);
+}
+
+textarea:focus {
+    height: 300px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+}
+
+
+#sendMessage {
+    position: fixed;
+    right: 0px;
+    width: 10%;
+    height: 50px;
+    font-size: 190%;
+    text-align: center;
+    transition: all 0.4s cubic-bezier(0.565, -0.260, 0.255, 1.410);
+}
+
+#record {
+    position: fixed;
+    left: 0px;
+    width: 10%;
+    height: 50px;
+    font-size: 190%;
+    text-align: center;
+    transition: all 0.4s cubic-bezier(0.565, -0.260, 0.255, 1.410);
+}
+
+.areaSelector {
+    position: fixed;
+    left: 20%;
+    bottom: 3%;
+    border-radius: 200px;
+    background-color: #EBC12C;
+    padding: 20px;
+    font-size: 110%;
+    transition: all 0.4s cubic-bezier(0.565, -0.260, 0.255, 1.410);
+    z-index: 999;
+}
+
+/* R E S P O N S I V E   C O N F I G U R A T I O N */
+
+@media screen and (max-width: 750px) {
+    ::-webkit-scrollbar {
+        display: none;
+    }
+
+    .chat {
+        margin-bottom: 55px;
+    }
+
+    .msg p {
+        font-size: 11px;
+    }
+
+    .msg .user {
+        font-size: 13px;
+    }
+
+    .msg img {
+        width: 300px;
+    }
+
+    .chat .notification {
+        font-size: 12px;
+        margin: 7px 30%;
+        width: 40%;
+    }
+
+    .chat .day {
+        font-size: 11px;
+    }
+
+    .send {
+        width: 25%;
+    }
+
+    textarea:focus {
+        height: 30vh;
+        margin-top: 30vh;
+        box-shadow: 0px -20px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    form:focus~.typezone {
+        bottom: 50vh;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .msg p {
+        max-width: 250px;
+    }
+
+    .msg img {
+        width: 200px;
+    }
+
+    .chat .notification {
+        font-size: 12px;
+        margin: 7px 0px;
+        width: 100%;
+        border-radius: 0px;
+    }
+
+    .chat .notification time {
+        right: 10px;
+    }
+
+    #sendMessage {
+        font-size: 150%;
+    }
+
+    #record {
+        font-size: 150%;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    #sendMessage {
+        font-size: 120%;
+    }
+
+    #record {
+        font-size: 120%;
+    }
 }
 
 
