Added about and updated sign up page

--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -95,11 +95,8 @@
                         </div>
                     </div>
                     <!-- AddToAny END -->
-                    <a class="dropdown-item" href="#UNDER_DEVELOPMENT">About</a>
+                    <a class="dropdown-item" href="{% url 'users:about' %}">About</a>
                     <a class="dropdown-item" href="https://www.surveymonkey.com/r/5WMYSSX" target="_blank">Feedback</a>
-                    <a class="dropdown-item" href="#"
-                        onclick="return alert('officialorgachat@gmail.com   Youtube channels: search for Orgachat')">FAQ
-                        and Contact</a>
                     <hr>
                     <form action="{% url 'logoutuser' %}" method="post">
                         {% csrf_token %}
