--- a/users/templates/users/signupuser.html
+++ b/users/templates/users/signupuser.html
@@ -10,13 +10,9 @@ organizing your chat{% endblock description %}
 <script src="{% static 'users/js/signupuser.js' %}"></script>
 <link rel="stylesheet" href="{% static 'users/css/signupuser.css' %}">
 <br><br>
-<div style="margin-left: auto; margin-right: auto; text-align: center;">
+<div class="center">
     <h1 style="color: #EBC12C">Start chatting in Orgachat</h1>
-    <h2>People in orgachat are much safer</h2>
-    <p>Protect yourself</p>
-    <p>your data</p>
-    <p>People you care about</p>
-    <p>The only thing others can access is your username</p>
+    <h2>Organize your chat for a better life</h2>
 </div>
 
 <div class="form-wrap">
