--- a/chat/static/chat/css/main.css
+++ b/chat/static/chat/css/main.css
@@ -64,6 +64,12 @@ body {
 /* REUSABLE */
 /* ------------------ */
 
+div.center{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
 /* ------Headings---------- */
 h2 {
     margin: 15px 0;
