--- a/chat/static/chat/css/room.css
+++ b/chat/static/chat/css/room.css
@@ -224,6 +224,10 @@ body {
     word-break: break-all;
 }
 
+.msg-txt {
+    white-space: pre;
+}
+
 .msg .user {
     font-size: 14px;
     margin: 0 0 2px 0;
@@ -279,7 +283,20 @@ body {
     margin-right: 4px;
 }
 
-
+#scrollBottom {
+    display: none;
+    background-color: #4CD137;
+    color: #EBC12C;
+    border-radius: 200px;
+    cursor: pointer;
+    border: #4CD137 solid 3px;
+    padding: 5px;
+    font-size: 150%;
+    position: fixed;
+    right: 20px;
+    bottom: 70px;
+    transition: all 0.4s cubic-bezier(0.565, -0.260, 0.255, 1.410);
+}
 
 /* T Y P E */
 .typezone {
@@ -469,10 +486,6 @@ textarea:focus {
 
 /*----------------page-wrapper----------------*/
 
-.page-wrapper {
-    height: 100vh;
-}
-
 .page-wrapper .theme {
     width: 40px;
     height: 40px;
@@ -489,6 +502,9 @@ textarea:focus {
 
 .page-wrapper.toggled .sidebar-wrapper {
     left: 0px;
+    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: scroll;
 }
 
 @media screen and (min-width: 768px) {
@@ -574,12 +590,6 @@ textarea:focus {
 .areas-all ul li a {
     text-decoration: none;
     color: white;
-}
-
-/* ------------Add area----------- */
-.area-add {
-    position: absolute;
-    bottom: 10px;
 }
 
 /* ------------------ */
